# symbolic-math-mcp

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: release.yml
cmake/: FindCadabra2.cmake
cpp/cmake/: FindSymEngine.cmake
cpp/src/: main.cpp
cpp/src/engine/: engine.cpp  engine.h  limits.h  output.cpp  output.h
cpp/src/mcp/: protocol.cpp  protocol.h  server.cpp
cpp/src/physics/: metric.cpp  metric.h  physics.cpp  physics.h
cpp/src/tensors/: cadabra_bridge.cpp  tensors.cpp
cpp/tests/: test_engine.cpp  test_parser.cpp  test_physics.cpp
docs/: octophysics-handoff.md
src/engine/: integrate.cpp  integrate.h  limits.cpp  parser.cpp  parser.h
src/mcp/: server.cpp  server.h  tool.h
src/physics/: physics.cpp  physics.h
src/symbolic_math/: __init__.py  engine.py  physics.py  server.py  tensors.py
src/tensors/: cadabra_bridge.h  tensors.h
tests/: test_engine.py  test_mcp_protocol.cpp  test_physics.cpp  test_physics.py  test_server.py  test_tensors.cpp  test_tensors.py
