[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "symbolic-math-mcp"
version = "0.1.0"
description = "MCP server for symbolic mathematics and tensor algebra"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "sympy>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
symbolic-math-mcp = "symbolic_math.server:main"

[tool.setuptools.packages.find]
where = ["src"]
